# scipy.c

signal/: filter.cpp  filter.h  numpy.h  signal.h
tests/: CMakeLists.txt  test.cpp
